actice_ns endpoint
